[package]
name = "iospng"
version = "0.1.0"
edition = "2021"

exclude = ["example"]
[workspace]
members = [".", "example"]

[dependencies]
miniz_oxide = "0.8.2"
thiserror = "2.0.9"
crc32fast = "1.4.2"
num-traits = "0.2"
num-derive = "0.4"
fast-stream = { path = "/Users/lake/dounine/github/ipa/fast-stream", features = ["all"] }