[package]
name = "iospng"
version = "0.1.0"
edition = "2021"

exclude = ["example"]
[workspace]
members = [".", "example"]

[dependencies]
thiserror = "2.0.9"
num-traits = "0.2"
num-derive = "0.4"
fast-stream = { path = "/Users/lake/dounine/github/ipa/fast-stream", features = ["file", "crc32", "enum", "deflate", "enum"] }
#miniz_oxide = "0.8.5"
#crc32fast = "1.4.2"